<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="150dp"
        android:text="@string/score1_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="220dp"
        android:text="@string/score2_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="365dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="533dp"
        android:text="@string/button1_increase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="368dp"
        android:layout_height="38dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="223dp"
        android:text="@string/button1_increase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="277dp"
        android:text="@string/button1_decrease"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="367dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="593dp"
        android:text="@string/button1_decrease"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="124dp"
        android:layout_height="53dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="144dp"
        android:text="@string/score1_value"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:layout_marginStart="278dp"
        android:layout_marginTop="469dp"
        android:text="@string/score2_value"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>